fixed some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,9 +146,11 @@ h1 {
 
 #animate {
     text-align: center;
+    margin: 40px 0px 0px 0px;
 }
 
 #animateText {
+    margin: 20px 0px 0px 0px;
     text-align: center;
     background-color: rgba(255, 255, 255, 0);
     color: whitesmoke;
